--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '25.0.0'
 
     defaultConfig {
-        applicationId "com.itheima.appstore"
+        applicationId "com.cheng.appstore"
         minSdkVersion 14
         targetSdkVersion 24
         versionCode 1
@@ -18,6 +18,7 @@ android {
         }
     }
 
+    //由于AndroidStudio已经默认集成了DataBinding，所以我们只需要将开关打开即可
     dataBinding {
         enabled = true
     }
@@ -33,5 +34,7 @@ dependencies {
     compile files('libs/glide-3.7.0.jar')
     compile(name: 'AndroidImageSlider-1.1.5', ext: 'aar')
     compile 'com.android.support:cardview-v7:24.2.1'
+
+
     compile 'com.github.satyan:sugar:1.5'
 }
