--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':databindingdemo', ':app', ':coordinatorlayoutdemo', ':collapsingtoolbarlayoutdemo', ':recycleviewdemo'
+include ':databindingdemo', ':app', ':coordinatorlayoutdemo', ':collapsingtoolbarlayoutdemo', ':recycleviewdemo', ':sqlite-demo'
