--- a/recycleviewdemo/build.gradle
+++ b/recycleviewdemo/build.gradle
@@ -18,6 +18,7 @@ android {
         }
     }
 
+    //开启dataBinding
     dataBinding{
         enabled true
     }
@@ -27,6 +28,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
+
     compile 'com.android.support:recyclerview-v7:24.2.0'
     compile 'com.android.support:cardview-v7:24.2.0'
 }
